// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prefers icon over avatar when both are specified 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "alignSelf": "flex-start",
        "borderStyle": "solid",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 32,
      },
      {
        "borderColor": "rgba(202, 196, 208, 1)",
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(254, 247, 255, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(254, 247, 255, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "alignSelf": "stretch",
            "flexShrink": 1,
            "justifyContent": "center",
            "minHeight": 32,
          },
          {
            "borderRadius": 8,
          },
          undefined,
        ],
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "opacity": 1,
            "paddingLeft": 8,
            "paddingRight": 16,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 18,
            "justifyContent": "center",
            "marginRight": 8,
            "width": 18,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(103, 80, 164, 1)",
                "fontSize": 18,
              },
              [
                {
                  "lineHeight": 18,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          information
        </Text>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "includeFontPadding": false,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(73, 69, 79, 1)",
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -2,
          "left": -2,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -2,
          "top": -2,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 10,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`prefers trailingIcon over the close icon when both trailingIcon and onClose are specified 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "alignSelf": "flex-start",
        "borderStyle": "solid",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 32,
      },
      {
        "borderColor": "rgba(202, 196, 208, 1)",
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(254, 247, 255, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(254, 247, 255, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "alignSelf": "stretch",
            "flexShrink": 1,
            "justifyContent": "center",
            "minHeight": 32,
          },
          {
            "borderRadius": 8,
          },
          undefined,
        ],
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "opacity": 1,
            "paddingLeft": 16,
            "paddingRight": 33,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "includeFontPadding": false,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(73, 69, 79, 1)",
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Trailing icon"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    centered={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "alignItems": "center",
            "borderRadius": 16,
            "bottom": 0,
            "justifyContent": "center",
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 32,
          },
          undefined,
          null,
        ],
      ]
    }
    testID="chip-trailing-icon"
  >
    <Text
      accessibilityElementsHidden={true}
      importantForAccessibility="no-hide-descendants"
      pointerEvents="none"
      selectable={false}
      style={
        [
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontSize": 18,
          },
          [
            {
              "lineHeight": 18,
              "transform": [
                {
                  "scaleX": 1,
                },
              ],
            },
            {
              "backgroundColor": "transparent",
            },
          ],
        ]
      }
    >
      menu-down
    </Text>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderRadius": 18,
          "borderWidth": 3,
          "bottom": -2,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -2,
          "top": -2,
          "width": 36,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -2,
          "left": -2,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -2,
          "top": -2,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 10,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders chip with a generic trailing icon 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "alignSelf": "flex-start",
        "borderStyle": "solid",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 32,
      },
      {
        "borderColor": "rgba(202, 196, 208, 1)",
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(254, 247, 255, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(254, 247, 255, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "alignSelf": "stretch",
            "flexShrink": 1,
            "justifyContent": "center",
            "minHeight": 32,
          },
          {
            "borderRadius": 8,
          },
          undefined,
        ],
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "opacity": 1,
            "paddingLeft": 8,
            "paddingRight": 33,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 18,
            "justifyContent": "center",
            "marginRight": 8,
            "width": 18,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(103, 80, 164, 1)",
                "fontSize": 18,
              },
              [
                {
                  "lineHeight": 18,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          information
        </Text>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "includeFontPadding": false,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(73, 69, 79, 1)",
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Trailing icon"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    centered={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "alignItems": "center",
            "borderRadius": 16,
            "bottom": 0,
            "justifyContent": "center",
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 32,
          },
          undefined,
          null,
        ],
      ]
    }
    testID="chip-trailing-icon"
  >
    <Text
      accessibilityElementsHidden={true}
      importantForAccessibility="no-hide-descendants"
      pointerEvents="none"
      selectable={false}
      style={
        [
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontSize": 18,
          },
          [
            {
              "lineHeight": 18,
              "transform": [
                {
                  "scaleX": 1,
                },
              ],
            },
            {
              "backgroundColor": "transparent",
            },
          ],
        ]
      }
    >
      menu-down
    </Text>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderRadius": 18,
          "borderWidth": 3,
          "bottom": -2,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -2,
          "top": -2,
          "width": 36,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -2,
          "left": -2,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -2,
          "top": -2,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 10,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders chip with avatar 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "alignSelf": "flex-start",
        "borderStyle": "solid",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 32,
      },
      {
        "borderColor": "rgba(202, 196, 208, 1)",
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(254, 247, 255, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(254, 247, 255, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "alignSelf": "stretch",
            "flexShrink": 1,
            "justifyContent": "center",
            "minHeight": 32,
          },
          {
            "borderRadius": 8,
          },
          undefined,
        ],
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "opacity": 1,
            "paddingLeft": 4,
            "paddingRight": 16,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 12,
              "height": 24,
              "marginRight": 8,
              "overflow": "hidden",
              "width": 24,
            },
            false,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "rgba(103, 80, 164, 1)",
                "borderRadius": 12,
                "height": 24,
                "width": 24,
              },
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "borderRadius": 12,
                "height": 24,
                "width": 24,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(29, 27, 32, 1)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                {
                  "writingDirection": "ltr",
                },
                [
                  {
                    "textAlign": "center",
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "#ffffff",
                    "fontSize": 12,
                    "lineHeight": 24,
                  },
                  undefined,
                ],
              ]
            }
          >
            XD
          </Text>
        </View>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "includeFontPadding": false,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(73, 69, 79, 1)",
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -2,
          "left": -2,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -2,
          "top": -2,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 10,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders chip with close button 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "alignSelf": "flex-start",
        "borderStyle": "solid",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 32,
      },
      {
        "borderColor": "rgba(202, 196, 208, 1)",
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(254, 247, 255, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(254, 247, 255, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "alignSelf": "stretch",
            "flexShrink": 1,
            "justifyContent": "center",
            "minHeight": 32,
          },
          {
            "borderRadius": 8,
          },
          undefined,
        ],
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "opacity": 1,
            "paddingLeft": 8,
            "paddingRight": 33,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 18,
            "justifyContent": "center",
            "marginRight": 8,
            "width": 18,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(103, 80, 164, 1)",
                "fontSize": 18,
              },
              [
                {
                  "lineHeight": 18,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          information
        </Text>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "includeFontPadding": false,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(73, 69, 79, 1)",
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Close"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    centered={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "alignItems": "center",
            "borderRadius": 16,
            "bottom": 0,
            "justifyContent": "center",
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 32,
          },
          undefined,
          null,
        ],
      ]
    }
    testID="chip-close"
  >
    <Text
      accessibilityElementsHidden={true}
      importantForAccessibility="no-hide-descendants"
      pointerEvents="none"
      selectable={false}
      style={
        [
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontSize": 18,
          },
          [
            {
              "lineHeight": 18,
              "transform": [
                {
                  "scaleX": 1,
                },
              ],
            },
            {
              "backgroundColor": "transparent",
            },
          ],
        ]
      }
    >
      close
    </Text>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderRadius": 18,
          "borderWidth": 3,
          "bottom": -2,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -2,
          "top": -2,
          "width": 36,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -2,
          "left": -2,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -2,
          "top": -2,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 10,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders chip with custom close button 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "alignSelf": "flex-start",
        "borderStyle": "solid",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 32,
      },
      {
        "borderColor": "rgba(202, 196, 208, 1)",
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(254, 247, 255, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(254, 247, 255, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "alignSelf": "stretch",
            "flexShrink": 1,
            "justifyContent": "center",
            "minHeight": 32,
          },
          {
            "borderRadius": 8,
          },
          undefined,
        ],
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "opacity": 1,
            "paddingLeft": 8,
            "paddingRight": 33,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 18,
            "justifyContent": "center",
            "marginRight": 8,
            "width": 18,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(103, 80, 164, 1)",
                "fontSize": 18,
              },
              [
                {
                  "lineHeight": 18,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          information
        </Text>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "includeFontPadding": false,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(73, 69, 79, 1)",
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Close"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    centered={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "alignItems": "center",
            "borderRadius": 16,
            "bottom": 0,
            "justifyContent": "center",
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 32,
          },
          undefined,
          null,
        ],
      ]
    }
    testID="chip-close"
  >
    <Text
      accessibilityElementsHidden={true}
      importantForAccessibility="no-hide-descendants"
      pointerEvents="none"
      selectable={false}
      style={
        [
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontSize": 18,
          },
          [
            {
              "lineHeight": 18,
              "transform": [
                {
                  "scaleX": 1,
                },
              ],
            },
            {
              "backgroundColor": "transparent",
            },
          ],
        ]
      }
    >
      arrow-down
    </Text>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderRadius": 18,
          "borderWidth": 3,
          "bottom": -2,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -2,
          "top": -2,
          "width": 36,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
  <View
    collapsable={false}
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -2,
          "left": -2,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -2,
          "top": -2,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 10,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders chip with icon 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "alignSelf": "flex-start",
        "borderStyle": "solid",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 32,
      },
      {
        "borderColor": "rgba(202, 196, 208, 1)",
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(254, 247, 255, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(254, 247, 255, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "alignSelf": "stretch",
            "flexShrink": 1,
            "justifyContent": "center",
            "minHeight": 32,
          },
          {
            "borderRadius": 8,
          },
          undefined,
        ],
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "opacity": 1,
            "paddingLeft": 8,
            "paddingRight": 16,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 18,
            "justifyContent": "center",
            "marginRight": 8,
            "width": 18,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(103, 80, 164, 1)",
                "fontSize": 18,
              },
              [
                {
                  "lineHeight": 18,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          information
        </Text>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "includeFontPadding": false,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(73, 69, 79, 1)",
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -2,
          "left": -2,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -2,
          "top": -2,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 10,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders chip with onPress 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "alignSelf": "flex-start",
        "borderStyle": "solid",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 32,
      },
      {
        "borderColor": "rgba(202, 196, 208, 1)",
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(254, 247, 255, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(254, 247, 255, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "alignSelf": "stretch",
            "flexShrink": 1,
            "justifyContent": "center",
            "minHeight": 32,
          },
          {
            "borderRadius": 8,
          },
          undefined,
        ],
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "opacity": 1,
            "paddingLeft": 16,
            "paddingRight": 16,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "includeFontPadding": false,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(73, 69, 79, 1)",
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -2,
          "left": -2,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -2,
          "top": -2,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 10,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders outlined disabled chip 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "alignSelf": "flex-start",
        "borderStyle": "solid",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 32,
      },
      {
        "borderColor": "rgba(202, 196, 208, 1)",
      },
      undefined,
      {},
      {
        "backgroundColor": "transparent",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "transparent",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "alignSelf": "stretch",
            "flexShrink": 1,
            "justifyContent": "center",
            "minHeight": 32,
          },
          {
            "borderRadius": 8,
          },
          undefined,
        ],
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "opacity": 0.38,
            "paddingLeft": 16,
            "paddingRight": 16,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "includeFontPadding": false,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(29, 27, 32, 1)",
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -2,
          "left": -2,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -2,
          "top": -2,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 10,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders selected chip 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "alignSelf": "flex-start",
        "borderStyle": "solid",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 32,
      },
      {
        "borderColor": "transparent",
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(232, 222, 248, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(232, 222, 248, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "alignSelf": "stretch",
            "flexShrink": 1,
            "justifyContent": "center",
            "minHeight": 32,
          },
          {
            "borderRadius": 8,
          },
          undefined,
        ],
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "opacity": 1,
            "paddingLeft": 8,
            "paddingRight": 16,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 18,
            "justifyContent": "center",
            "marginRight": 8,
            "width": 18,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(29, 25, 43, 1)",
                "fontSize": 18,
              },
              [
                {
                  "lineHeight": 18,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          check
        </Text>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "includeFontPadding": false,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(29, 25, 43, 1)",
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -2,
          "left": -2,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -2,
          "top": -2,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 10,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders selected chip with avatar and a check overlay 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "alignSelf": "flex-start",
        "borderStyle": "solid",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 32,
      },
      {
        "borderColor": "transparent",
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(232, 222, 248, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(232, 222, 248, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "alignSelf": "stretch",
            "flexShrink": 1,
            "justifyContent": "center",
            "minHeight": 32,
          },
          {
            "borderRadius": 8,
          },
          undefined,
        ],
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "opacity": 1,
            "paddingLeft": 4,
            "paddingRight": 16,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 12,
              "height": 24,
              "marginRight": 8,
              "overflow": "hidden",
              "width": 24,
            },
            false,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "rgba(103, 80, 164, 1)",
                "borderRadius": 12,
                "height": 24,
                "width": 24,
              },
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "borderRadius": 12,
                "height": 24,
                "width": 24,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(29, 27, 32, 1)",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                },
                {
                  "writingDirection": "ltr",
                },
                [
                  {
                    "textAlign": "center",
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "#ffffff",
                    "fontSize": 12,
                    "lineHeight": 24,
                  },
                  undefined,
                ],
              ]
            }
          >
            XD
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "backgroundColor": "rgba(29, 27, 32, 0.1)",
              },
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(254, 247, 255, 1)",
                  "fontSize": 18,
                },
                [
                  {
                    "lineHeight": 18,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
              ]
            }
          >
            check
          </Text>
        </View>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "includeFontPadding": false,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(29, 25, 43, 1)",
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
  <View
    collapsable={false}
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -2,
          "left": -2,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -2,
          "top": -2,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
          "borderRadius": 10,
        },
        {
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;
